--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open --host=localhost",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cnpm": "^8.5.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "less": "^4.1.3",
+    "less-loader": "^6.2.0",
+    "nprogress": "^0.2.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.3",
+    "vuex": "3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,7 +39,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/comment-directive": "off"
+    }
   },
   "browserslist": [
     "> 1%",
